k8s-files/app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep
  labels:
    app: app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-dep
  template:
    metadata:
      labels:
        app: app-dep
    spec:
      containers:
        - name: app-dep
          image: kubeanas/projectapp:1.0.0    
          ports:
            - containerPort: 8080
              name: app-dep-port
