k8s-files/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject-db
  labels:
    app: myproject-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myproject-db
  template:
    metadata:
      labels:
        app: myproject-db
    spec:
      containers:
        - name: myproject-db
          image: kubeanas/projectdb:1.0.0
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: myproject-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: myproject-pvc
          persistentVolumeClaim:
            claimName: local
