k8s-files/rmq-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-dep
  labels:
    app: rabbitmq-dep
spec:
  replicas: 1                
  selector:
    matchLabels:
      app: rabbitmq-dep
  template:
    metadata:
      labels:
        app: rabbitmq-dep
    spec:
      containers:
        - name: rabbitmq-dep
          image: rabbitmq    
          ports:
            - containerPort: 5672       
              name: rabbitmq-port
            - containerPort: 15672      
              name: rabbitmq-mport
