k8s-files/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: app-svc
spec:
  selector:
    app: app-dep
  ports:
    - protocol: TCP
      port: 8080             
      targetPort: app-dep-port
  type: ClusterIP
