k8s-files/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db01
  labels:
    app: db01
spec:
  selector:
    app: myproject-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: myproject-db-port
      name: myproject-db-port
  type: ClusterIP
