k8s-files/mc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mc01
  labels:
    app: mc01
spec:
  selector:
    app: memcached-dep
  ports:
    - protocol: TCP
      port: 11211            
      targetPort: memcached-port
      name: memcached-port
  type: ClusterIP
