k8s-files/rmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq01
  labels:
    app: rmq01
spec:
  selector:
    app: rabbitmq-dep
  ports:
    - protocol: TCP
      port: 5672            
      targetPort: rabbitmq-port
      name: rabbitmq-port
    - protocol: TCP
      port: 15672           
      targetPort: rabbitmq-mport
      name: rabbitmq-mport
  type: ClusterIP
